force-app/main/default/objects/Opportunity__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <label>Opportunity Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>