force-app/main/default/objects/Opportunity__c/fields/Opportunity_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Open_Date__c</fullName>
    <label>Opportunity Open Date</label>
    <type>DateTime</type>
</CustomField>